--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ mercurial==1.9.3
 python-dateutil==1.5
 PIL==1.1.7
 psycopg2
-python-memcached==1.47
+# python-memcached==1.47
 gunicorn==0.13.4
 pyparsing==1.5.6
 django-xmlrpc==0.1.3
