--- a/requirements.unstable.txt
+++ b/requirements.unstable.txt
@@ -9,6 +9,8 @@
 -e git://github.com/skoczen/nose-xcover.git#egg=nosexcover
 -e git://github.com/skoczen/qi-toolkit.git#egg=qi-toolkit
 -e git://github.com/tkaemming/django-subdomains.git#egg=django-subdomains
+-e git+git://github.com/acdha/django-speedtracer.git#egg=speedtracer
+django-compressor==1.1.2
 akismet
 BeautifulSoup
 boto==2.0rc1
@@ -26,7 +28,7 @@ django-newsletter
 django-nose
 django-pagination
 django-ses
-django-sslify
+# django-sslify
 django-staticfiles
 django-storages
 django-taggit
