--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ git+git://github.com/GoodCloud/django-longer-username.git
 git+git://github.com/GoodCloud/django-functional-tests
 #git+git://github.com/GoodCloud/tavutil.git
 #git+git://github.com/GoodCloud/bolt.git
-git+git://github.com/GoodCloud/django_compressor.git@cached_offline#egg=django_compressor
+-e git://github.com/GoodCloud/django_compressor.git@cached_offline#egg=django_compressor
 # django-compressor==1.1.2
 Fabric==1.3.1
 mercurial==1.9.3
