--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,37 @@ coverage==3.5.1
 django-taggit==0.9.3
 django-taggit-templatetags==0.4.6dev
 boto==2.0rc1
+django-ses==0.2
+django-storages==1.1.3
+django-debug-toolbar==0.8.5
+xlwt==0.7.2
+xlrd==0.7.1
+xlutils==1.4.1
+pycurl==7.19.0
+stripe==1.5.27
+py-bcrypt==0.2
+django-zebra==0.4.2
+pytz==2011k
+html5lib==0.90
+## The following requirements were added by pip --freeze:
+django==1.3.1
+MySQL-python==1.2.3
+PyYAML==3.10
+South==0.7.3
+anyjson==0.3.1
+async==0.6.1
+django-appconf==0.4.1
+django-paging==0.2.4
+django-templatetag-sugar==0.1
+git+git://github.com/GoodCloud/django-timezones.git
+git+git://github.com/GoodCloud/johnny-cache.git
+lxml==2.3.2
+paramiko==1.7.7.1
+pycrypto==2.4
+pylint==0.25.0
+simplejson==2.2.1
+ssh==1.7.8
+unittest2==0.5.1
+pylibmc==1.2.2
+django-pylibmc-sasl==0.2.4
+newrelic==1.5.0.103
