--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,9 @@ lorem-ipsum-generator==0.3
 nose==1.1.2
 django-nose==0.1.3
 # nose-exclude==0.1.7
-django-celery-with-redis==3.0
+
+celery-with-redis<2.5
+django-celery
 coverage==3.5.1
 django-taggit==0.9.3
 django-taggit-templatetags==0.4.6dev
@@ -75,6 +77,9 @@ errorhandler==1.1.1
 eventlet==0.9.16
 filebrowser-safe==0.1.2
 gitdb==0.5.2
+grappelli-safe==0.1.8
+greenlet==0.3.1
+ipaddr==2.1.9
 git+git://github.com/GoodCloud/johnny-cache.git
 lockfile==0.9.1
 logilab-astng==0.23.0
