--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,9 @@ lorem-ipsum-generator==0.3
 nose==1.1.2
 django-nose==0.1.3
 # nose-exclude==0.1.7
-django-celery-with-redis==3.0
+
+celery-with-redis<2.5
+django-celery
 coverage==3.5.1
 django-taggit==0.9.3
 django-taggit-templatetags==0.4.6dev
