--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,6 @@ PIL==1.1.7
 psycopg2
 # python-memcached==1.47
 gunicorn==0.13.4
-pyparsing==1.5.6
 django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
@@ -33,14 +32,12 @@ lorem-ipsum-generator==0.3
 nose==1.1.2
 django-nose==0.1.3
 # nose-exclude==0.1.7
-
-celery-with-redis<2.5
-django-celery
+django-celery-with-redis==3.0
 coverage==3.5.1
 django-taggit==0.9.3
 django-taggit-templatetags==0.4.6dev
-boto==2.0rc1
-django-ses==0.2
+boto==2.9.0
+django-ses==0.4.1
 django-storages==1.1.3
 slimmer==0.1.30
 django-debug-toolbar==0.8.5
