--- a/requirements.unstable.txt
+++ b/requirements.unstable.txt
@@ -12,12 +12,12 @@
 # django-compressor==1.1.2
 akismet
 BeautifulSoup
-boto==2.0rc1
+boto==2.0b4
 celery-with-redis
 chardet
 cherrypy
 coverage >= 3.4
-django >=1.3.1
+django < 1.5
 django-analytical
 django-celery
 django-debug-toolbar
@@ -48,10 +48,9 @@ pip > 1.0
 psycopg2
 py-bcrypt
 pycurl
-pyparsing
 python-crontab
 python-dateutil <2.0
-# python-memcached
+python-memcached
 pytz
 slimmer
 sorl-thumbnail
