--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ git+git://github.com/GoodCloud/django-functional-tests
 Fabric==1.3.1
 mercurial==1.9.3
 python-dateutil==1.5
+dj-database-url==0.2.0
 PIL==1.1.7
 psycopg2
 # python-memcached==1.47
