--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ BeautifulSoup==3.2.0
 django-extensions==0.7.1
 python-crontab==0.9.6
 django-analytical==0.12.1
+django-heroku-postgresify==0.3
 django-pagination==1.0.7
 sorl-thumbnail==11.09
 tagging==0.2.1
