--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,9 @@ git+git://github.com/GoodCloud/django-functional-tests
 -e git://github.com/GoodCloud/django_compressor.git@develop#egg=django_compressor
 # django-compressor==1.1.2
 Fabric==1.3.1
-mercurial==1.9.3
 python-dateutil==1.5
 dj-database-url==0.2.0
-PIL==1.1.7
+Pillow==2.4.0
 psycopg2
 # python-memcached==1.47
 gunicorn==0.13.4
@@ -52,13 +51,13 @@ django-tinymce==1.5.1a2
 chardet==1.0.1
 pycurl==7.19.0
 stripe==1.5.27
-py-bcrypt==0.2
+py-bcrypt==0.4
 django-zebra==0.4.2
 pytz==2011k
 html5lib==0.90
 ## The following requirements were added by pip --freeze:
 git+git://github.com/PaulUithol/backbone-tastypie.git
-CherryPy==3.2.2
+CherryPy==3.3.0
 django==1.3.1
 MySQL-python==1.2.3
 PyYAML==3.10
@@ -92,9 +91,8 @@ python-daemon==1.6
 python-digest==1.7
 simplejson==2.2.1
 ssh==1.7.8
-tornado==2.1.1
 unittest2==0.5.1
 wsgiref==0.1.2
 pylibmc==1.2.2
 django-pylibmc-sasl==0.2.4
-newrelic==1.5.0.103
+newrelic==2.8.0.7
